--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.6",
     "vuex": "^3.1.0",
+    "vuex-persist": "^3.1.3",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14",
